--- a/.github/workflows/listen-swagger-changes.yaml
+++ b/.github/workflows/listen-swagger-changes.yaml
@@ -1,7 +1,8 @@
 name: "Check for new Swagger release 🕵️‍♂️"
 on:
   schedule:
-    - cron: "0 0 * * *" # Every day at midnight
+    - cron: "0 0 * * *"
+    # Every day at midnight
 
 jobs:
   check:
