chore: add line break in github workflow

--- a/.github/workflows/listen-swagger-changes.yaml
+++ b/.github/workflows/listen-swagger-changes.yaml
@@ -1,8 +1,8 @@
 name: "Check for new Swagger release 🕵️‍♂️"
 on:
   schedule:
-    - cron: "0 0 * * *"
-    # Every day at midnight
+    - cron: '0 0 * * *'
+
 
 jobs:
   check:
