--- a/.github/workflows/listen-swagger-changes.yaml
+++ b/.github/workflows/listen-swagger-changes.yaml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: "Check out repository 🚚"
         uses: actions/checkout@v4
+        run: ls
       - name: "Set up Python 🐍"
         uses: actions/setup-python@v5
         with:
@@ -17,6 +18,7 @@ jobs:
       - name: "Install python libraries 📚"
         run: python -m pip install requests
       - name: "Check for new Swagger release 🕵️‍♂️"
+        working-directory: .
         run: python check_swagger.py
         # It will set SWAGGER_UI_UPDATED and SWAGGER_UI_VERSION env variables
         # If there is a new release, then needed files will be updated
