--- a/.github/workflows/listen-swagger-changes.yaml
+++ b/.github/workflows/listen-swagger-changes.yaml
@@ -10,7 +10,10 @@ jobs:
     steps:
       - name: "Check out repository 🚚"
         uses: actions/checkout@v4
-        run: ls
+      - name: "Print some debug info 🐞"
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Files in the current directory: $(ls)"
       - name: "Set up Python 🐍"
         uses: actions/setup-python@v5
         with:
