--- a/.github/workflows/listen-swagger-changes.yaml
+++ b/.github/workflows/listen-swagger-changes.yaml
@@ -33,8 +33,8 @@ jobs:
         # If there is a new release, then needed files will be updated
       - name: "Make a commit if needed 📝"
         env:
-          updated: ${{ outputs.updated }}
-          version: ${{ outputs.version }}
+          updated: ${{ steps.check.outputs.updated }}
+          version: ${{ steps.check.outputs.version }}
         run: |
           if [ "$updated" = "true" ]; then
             git config --global user.email "ruslan.belckov@yandex.ru"
