--- a/.github/workflows/listen-swagger-changes.yaml
+++ b/.github/workflows/listen-swagger-changes.yaml
@@ -59,6 +59,8 @@ jobs:
     steps:
       - name: "Check out repository 🚚"
         uses: actions/checkout@v4
+      - name: "Pull the latest changes 🔄"
+        run: git pull
       - name: "Set up Python 🐍"
         uses: actions/setup-python@v5
         with:
