--- a/.github/workflows/listen-swagger-changes.yaml
+++ b/.github/workflows/listen-swagger-changes.yaml
@@ -56,6 +56,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: check
     if: ${{ needs.check.outputs.updated == 'true' }}
+    environment:
+      name: pypi
+      url: https://pypi.org/p/fastapi-swagger
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
       - name: "Check out repository 🚚"
         uses: actions/checkout@v4
@@ -112,3 +117,5 @@ jobs:
           files: dist/*
           tag_name: "v${{ steps.bump.outputs.package_version }}"
           body: "Package version: v${{ steps.bump.outputs.package_version }} 🚀\nSwagger UI version: ${{ needs.check.outputs.version }}"
+      - name: "Publish on PyPI 📦"
+        uses: pypa/gh-action-pypi-publish@release/v1.9
