--- a/.github/workflows/listen-swagger-changes.yaml
+++ b/.github/workflows/listen-swagger-changes.yaml
@@ -56,11 +56,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: check
     if: ${{ needs.check.outputs.updated == 'true' }}
-    environment:
-      name: pypi
-      url: https://pypi.org/p/fastapi-swagger
-    permissions:
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
       - name: "Check out repository 🚚"
         uses: actions/checkout@v4
@@ -111,11 +106,14 @@ jobs:
           git commit -m "chore: bump version to $package_version"
           git tag -a "v$package_version" -m "Release $package_version"
           git push --follow-tags
+      - name: "Upload artifacts 📦"
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
       - name: "Make a release 🚀"
         uses: softprops/action-gh-release@v2
         with:
           files: dist/*
           tag_name: "v${{ steps.bump.outputs.package_version }}"
           body: "Package version: v${{ steps.bump.outputs.package_version }} 🚀\nSwagger UI version: ${{ needs.check.outputs.version }}"
-      - name: "Publish on PyPI 📦"
-        uses: pypa/gh-action-pypi-publish@release/v1.9
