chore: use PAT to trigger workflows

--- a/.github/workflows/listen-swagger-changes.yaml
+++ b/.github/workflows/listen-swagger-changes.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: "Check out repository 🚚"
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PAT }}
       - name: "Print some debug info 🐞"
         run: |
           echo "Current directory: $(pwd)"
