--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,6 +4,48 @@ on:
     types: [ published ]
 
 jobs:
+  build:
+    name: "Build 🏗"
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Check out repository 🚚"
+        uses: actions/checkout@v4
+      - name: "Set up Python 🐍"
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - name: "Install Poetry 📦 (cache-hit)"
+        id: cached-poetry
+        uses: actions/cache@v4
+        with:
+          path: ~/.local  # the path depends on the OS
+          key: poetry-1.8.3  # increment to reset cache
+      - name: "Install Poetry 📦"
+        if: steps.cached-poetry.outputs.cache-hit != 'true'
+        uses: snok/install-poetry@v1
+        with:
+          version: '1.8.3'
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      - name: "Install Poetry dependencies 📦 (cache-hit)"
+        id: cached-poetry-dependencies
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: venv-test-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      - name: "Install Poetry dependencies 📦"
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --with dev
+      - name: "Test the project 🧪"
+        run: poetry run pytest
+      - name: "Build the project 🏗"
+        run: poetry build
+      - name: "Upload artifacts 📦"
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
+
   pypi-publish:
     name: "Upload release to PyPI 📦"
     runs-on: ubuntu-latest
