--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,4 +1,4 @@
-name: "Publish to PyPI 📦"
+name: "Publish to PyPI on manual release 📦"
 on:
   release:
     types: [ published ]
@@ -49,6 +49,7 @@ jobs:
   pypi-publish:
     name: "Upload release to PyPI 📦"
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: pypi
       url: https://pypi.org/p/fastapi-swagger
