--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fastapi-swagger"
-version = "0.1.7"
+version = "0.2.0"
 description = ""
 authors = ["Ruslan Bel'kov <ruslan.belckov@yandex.ru>"]
 readme = "README.md"
@@ -20,8 +20,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "0.100"
-
+fastapi = "^0.100"
 
 [tool.poetry.group.dev.dependencies]
 requests = "^2.32.3"
