--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "fastapi-swagger"
 version = "0.2.1"
-description = ""
+description = "This plugin updates the FastAPI app to host latest Swagger UI distribution."
 authors = ["Ruslan Bel'kov <ruslan.belckov@yandex.ru>"]
 readme = "README.md"
 license = "MIT"
