--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
-[tool.poetry]
+[project]
 name = "fastapi-swagger"
-version = "0.2.26"
+version = "0.3.26"
 description = "This plugin updates the FastAPI app to host latest Swagger UI distribution."
-authors = ["Ruslan Bel'kov <ruslan.belckov@yandex.ru>"]
+authors = [{ name = "Ruslan Bel'kov", email = "ruslan.belckov@yandex.ru" }]
+requires-python = "~=3.10"
 readme = "README.md"
 license = "MIT"
 classifiers = [
@@ -12,22 +13,26 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
 ]
-homepage = "https://github.com/dantetemplar/fastapi-swagger"
-repository = "https://github.com/dantetemplar/fastapi-swagger"
-packages = [
-    { include = "fastapi_swagger" },
+dependencies = ["fastapi>=0.100"]
+
+[project.urls]
+Homepage = "https://github.com/dantetemplar/fastapi-swagger"
+Repository = "https://github.com/dantetemplar/fastapi-swagger"
+
+[dependency-groups]
+dev = [
+    "requests>=2.32.3,<3",
+    "ruff>=0.5.7,<0.6",
+    "httpx>=0.27.0,<0.28",
+    "pytest>=8.3.2,<9",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-fastapi = ">=0.100"
+[tool.hatch.build.targets.sdist]
+include = ["fastapi_swagger"]
 
-[tool.poetry.group.dev.dependencies]
-requests = "^2.32.3"
-ruff = "^0.5.7"
-httpx = "^0.27.0"
-pytest = "^8.3.2"
+[tool.hatch.build.targets.wheel]
+include = ["fastapi_swagger"]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
