--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,13 @@ dependencies = ["fastapi>=0.100"]
 Homepage = "https://github.com/dantetemplar/fastapi-swagger"
 Repository = "https://github.com/dantetemplar/fastapi-swagger"
 
-[dependency-groups]
+[project.optional-dependencies]
 dev = [
     "requests>=2.32.3,<3",
     "ruff>=0.5.7,<0.6",
     "httpx>=0.27.0,<0.28",
     "pytest>=8.3.2,<9",
+    "fastapi[standard]>=0.100",
 ]
 
 [tool.hatch.build.targets.sdist]
