--- a/.github/workflows/listen-swagger-changes.yaml
+++ b/.github/workflows/listen-swagger-changes.yaml
@@ -80,8 +80,8 @@ jobs:
         env:
           package_version: ${{ steps.bump.outputs.package_version }}
         run: |
-          git config --global user.email "ruslan.belckov@yandex.ru"
-          git config --global user.name "Automated Swagger UI update"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add pyproject.toml
           git commit -m "chore: bump version to $package_version"
           git tag -a "v$package_version" -m "Release $package_version"
